# adventofcode2021

./: .gitignore  day_01.py  day_02.py  day_03.py  day_one.py  day_two.py  pyproject.toml
check/: code.sh  coverage.sh
code/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py
days/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py
