[tool.poetry]
name = "adventofcode2021"
version = "0.1.0"
description = "Advent of Code 2021"
authors = ["Thijs Baaijen <Thijss@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
pylint = "^2.12.1"
pycodestyle = "^2.8.0"
coverage = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
