[tool.poetry]
name = "advent-of-code-2021"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "*"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
isort = "^5.10.1"
taskipy = "^1.9.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.taskipy.tasks]
lint = "black code && isort code && flake8 code"
